# insta_clone

./: .gitignore  README.md
backend/: main.py  pyproject.toml
backend/auth/: authentication.py  oauth2.py
backend/db/: database.py  db_comment.py  db_post.py  db_user.py  models.py  pass_hashing.py
backend/routers/: comment.py  post.py  schemas.py  user.py
frontend/: package-lock.json
frontend/src/: App.css  App.js  ImageUpload.css  ImageUpload.js  Post.css  Post.js
